# TuaThanTsinn

./: .gitignore  README.md  pyproject.toml
src/TuaThanTsinn/ANA001_台股選股/: deploy.py  twstock_cis_2560選股.ipynb  twstock_cis選股.ipynb  twstock_dmi選股.ipynb  twstock_kd選股.ipynb  twstock_rsmacd.ipynb  twstock_均線多排選股.ipynb  twstock_布林通道選股.ipynb  twstock_籌碼選股.ipynb
src/TuaThanTsinn/ANA002_台股大盤晴雨表/: collect_台股晴雨表_台指期貨三大法人期貨淨未平倉量口數.ipynb  collect_台股晴雨表_台指選擇權put_call_ratio值抓取.ipynb  collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb  collect_台股晴雨表_景氣對策燈號.ipynb  collect_台股晴雨表_自營商選擇權.ipynb  deploy.py
src/TuaThanTsinn/ANA003_麥克連大盤脈動/: collect_麥克連大盤脈動_part_1_大盤指數收盤資訊.ipynb  collect_麥克連大盤脈動_part_2_融資融券餘額.ipynb  collect_麥克連大盤脈動_part_3_美股大盤收盤資訊.ipynb  collect_麥克連大盤脈動_part_4_三大法人買賣超.ipynb  collect_麥克連大盤脈動_part_5_美元兌台幣匯率.ipynb  deploy.py
src/TuaThanTsinn/DPL001_台股數據收集/: collect_twstock_etf_list.ipynb  collect_台股收盤資訊.ipynb  collect_央行證券劃撥存款.ipynb  collect_鉅亨網題材來源.ipynb  collect_集保餘額查詢.ipynb  deploy.py
src/TuaThanTsinn/flow01/: deploy.py
src/TuaThanTsinn/prefect_service/: prefect.yaml  simple_deploy.py  start_server.py
src/TuaThanTsinn/proj_util_pkg/common/: duckdb_tool.py
