[project]
name = "tuathantsinn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.0",
    "duckdb-engine>=0.17.0",
    "finlab>=1.3.0",
    "gspread>=6.2.1",
    "ipykernel>=6.29.5",
    "ipython-sql>=0.5.0",
    "jupysql>=0.11.1",
    "lxml>=5.4.0",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "papermill>=2.6.0",
    "prefect>=3.4.4",
    "pydantic>=2.11.5",
    "ta-lib>=0.6.3",
]
